--- a/about.html
+++ b/about.html
@@ -1,16 +1,10 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Truck a Transport Category Flat Bootstarp responsive Website Template| About :: w3layouts</title>
+<title>Ecocycler</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Truck Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="Eco-cycler Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstarp-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -53,9 +47,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="top-nav">
 					<span class="menu"><img src="images/menu.png" alt=""></span>
 					<ul class="nav1">
-						<li class="hvr-sweep-to-bottom active"><a href="about.html active">About<i><img src="images/nav-but2.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Vendor<i><img src="images/truck.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="partner.html">Be a Partner<i><img src="images/handshake.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom active"><a href="about.html">About<i><img src="images/nav-but2.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Carrier<i><img src="images/truck.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="partner.html">Join as Customer<i><img src="images/handshake.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="blog.html">Blog<i><img src="images/nav-but4.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="login.html">Login<i><img src="images/log-in.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
@@ -93,8 +87,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="jumbotron banner-bottom-left wow fadeInLeft animated animated" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-delay: 0.5s;">
 					  <!-- <h3>Nullam consectetur tristique</h3> -->
 						<!-- <h5>Cras porttitor imperdiet volutpat. Nulla malesuada lectus eros ut convallis felis <span>consectetur ut</span></h5> -->
-						<p>Ecocycler is a startup with a zeal whose ambitious is to serve our nation folks with a <span class="" style="color: #006900;">Green Environment.</span>
-						</p>
+						<div class="row">
+							<div class="col-md-7">
+								<p>Ecocycler is a startup with a zeal whose ambitious is to serve our nation folks with a <span class="" style="color: #006900;">Green Environment.</span> Our organization is an absolute blend of socio-development that allows sales of scrap online to keep your homeland clean and with a touch of technology that erode away scrap from your home in exchange of some valuable cash which can be accessed through any devices or gadgets resources with our mobility web solutions.
+								</p><br>
+								<p>Ecocycler is here to resolve all setback related to buy & Sell of waste from the customers online. We made a wider impact in our flourishing waste management Industry by collaboration with all our sales person to form a profitable chain management with a hassle free online pick up for our customers through a dedicated Mobile Application. We cracked down free communication between customers and vendors where our team monitors all the web process for a smooth functioning.</p>
+							</div>
+							<div class="col-md-5"></div>
+						</div>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -107,27 +107,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="about-bottom">
 		<!-- container -->
 		<div class="container">
-			<h3 class="wow fadeInRight animated" style="visibility: visible;">A new generation of Trucks</h3>
+			<!-- <h3 class="wow fadeInRight animated" style="visibility: visible;">A new generation of Trucks</h3> -->
 			<div class="about-bottom-grids">
 				<div class="col-md-6 about-bottom-left wow fadeInLeft animated animated" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-delay: 0.5s;">
-					<h4>Morbi convallis urna sit amet feugiat</h4>
-					<p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius. Mauris nec ligula 
-						diam. Cras ullamcorper lorem eu sapien viverra cursus. Pellentesque commodo libero eget malesuada blandit. 
-						<span>Integer at imperdiet orci. Donec laoreet dignissim ex, vitae hendrerit nulla. Praesent efficitur ex vel tempus 
-						blandit. Nunc sed purus ac sapien cursus eleifend vitae id ipsum. Mauris nec vehicula est. </span>
-						Nullam ac odio massa nullam et condimentum magna, eget congue dui.Sed sit amet laoreet libero. Duis faucibus 
-						felis et dolor ultrices pulvinar eu at orci.
-					</p>
+					<!-- <h4>Morbi convallis urna sit amet feugiat</h4> -->
+					<h4>WHO ARE VENDORS?</h4>
+					<p>Vendors are traditional supplier is an individual that work as virtual part of our team. A scrap dealer, who buy $ stockpile the goods from the customers to sell it to another scrap dealer.</p>
+
+					<h4 style="margin-top: 30px;">WHY VENDOR IN OUR BUSINESS?</h4> 
+					<p>We team up with trustworthy vendors to join us to bring them a wide customer base to make generate revenues, which is impossible in their regular scrap trading business. </p>
+					<h4 style="margin-top: 30px;">BENEFITS FOR SALESPERSON(VENDORS)</h4>
+					<ol type="01" class="__ol">
+						<li>Converting them into online salesperson in order to generate reasonable revenue.</li>
+						<li>Engaging them in their respective business.</li>
+						<li>Ethnical business format for salesperson to work more professionally.</li>
+						<li>Making online scrap market interesting for customers.</li>
+						<li>Boost their revenue by joining them with huge customer base.</li>
+					</ol>
 				</div>
 				<div class="col-md-6 about-bottom-left about-bottom-right wow fadeInRight animated animated" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-delay: 0.5s;">
-					<h4>Morbi convallis urna sit amet feugiat</h4>
-					<p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius. Mauris nec ligula 
-						diam. Cras ullamcorper lorem eu sapien viverra cursus. Pellentesque commodo libero eget malesuada blandit. 
-						<span>Integer at imperdiet orci. Donec laoreet dignissim ex, vitae hendrerit nulla. Praesent efficitur ex vel tempus 
-						blandit. Nunc sed purus ac sapien cursus eleifend vitae id ipsum. Mauris nec vehicula est. </span>
-						Nullam ac odio massa nullam et condimentum magna, eget congue dui.Sed sit amet laoreet libero. Duis faucibus 
-						felis et dolor ultrices pulvinar eu at orci.
-					</p>
+					<h4>WHO ARE PARTNERS?</h4>
+					<p>Vendors are traditional supplier is an individual that work as virtual part of our team. A scrap dealer, who buy $ stockpile the goods from the customers to sell it to another scrap dealer.</p>
+
+					<h4 style="margin-top: 30px;">WHY VENDOR IN OUR BUSINESS?</h4> 
+					<p>We team up with trustworthy vendors to join us to bring them a wide customer base to make generate revenues, which is impossible in their regular scrap trading business. </p>
+					<h4 style="margin-top: 30px;">BENEFITS FOR SALESPERSON(VENDORS)</h4>
+					<ol type="01" class="__ol">
+						<li>Converting them into online salesperson in order to generate reasonable revenue.</li>
+						<li>Engaging them in their respective business.</li>
+						<li>Ethnical business format for salesperson to work more professionally.</li>
+						<li>Making online scrap market interesting for customers.</li>
+						<li>Boost their revenue by joining them with huge customer base.</li>
+					</ol>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -140,27 +151,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- container -->
 		<div class="container">
 			<div class="team-info">
-				<h3 class="wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">Meet Our Team</h3>
+				<h3 class="wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">FAQs</h3>
 				<div class="team-grids">
-					<div class="col-md-3 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-						<img src="images/b7.jpg" alt="">
-						<h6>Jain Smith</h6>
-						<p> Curabitur orci massa, convallis id mauris sed, venenatis porttitor</p>
+					<div class="col-md-6 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+						<h4><u>I'm a business, can you help me?</u></h4>
+						<p>Fantastic we would love to serve you just give us a call or drop us a request and we will arrange a pickup for you. Also we have regular scheduled pickup services for business just give us a call.</p>
+
+						<h4><u>What do you do with all this stuff?</u></h4>
+						<p>We see if the stuff you are selling can be either raised by somebody else. If not, then we try if it can be refurbished. If that still is not the case, then we sell it to recyclers to melt it to make something better out of it.</p>
+
+						<h4><u>My item is not listed in your list, will yo buy it?</u></h4>
+						<p>If you have used it in the past, probablilities are somebody might want to reuse it or it is recycled. So we will make our best efforts to grab it from you if possible.</p>
+
+						<h4><u>Do you operate in my city?</u></h4>
+						<p>We are operational in lagos and are expecting to other states as fast as we can. We have plans to operate in other states too real soon.</p>
+
+						<h4><u>What all do you collect?</u></h4>
+						<p>We collect almost everythings which you might want to sell. Mostly we called recyclable and resusable stuff. If you are not sure we would buy your stuff, just give us a call</p>
 					</div>
-					<div class="col-md-3 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-						<img src="images/b10.jpg" alt="">
-						<h6>shan carter</h6>
-						<p> Curabitur orci massa, convallis id mauris sed, venenatis porttitor</p>
-					</div>
-					<div class="col-md-3 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-						<img src="images/b8.jpg" alt="">
-						<h6>Jack dany</h6>
-						<p> Curabitur orci massa, convallis id mauris sed, venenatis porttitor</p>
-					</div>
-					<div class="col-md-3 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-						<img src="images/b9.jpg" alt="">
-						<h6>Mary Jain</h6>
-						<p> Curabitur orci massa, convallis id mauris sed, venenatis porttitor</p>
+					
+					<div class="col-md-6 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+						
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -175,9 +186,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 				<ul>
-					<li><a href="index.html">FAQs</a></li>
+					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Join as Vendor</a></li>
+					<li><a href="vendor.html">Join as Carrier</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="mail.html">Mail Us</a></li>
 				</ul>
