--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
 						<li class="hvr-sweep-to-bottom"><a href="partner.html">Join as Customer<i><img src="images/handshake.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="blog.html">Blog<i><img src="images/nav-but4.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="login.html">Login<i><img src="images/log-in.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom active"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
 					<!-- 	<div class="clearfix"> </div>
 					 --></ul>
 					<!-- script-for-menu -->
@@ -71,57 +71,41 @@
 		<!-- //container -->
 	</div>
 	<!-- //banner -->
-	<!-- mail -->
-	<div class="mail">
+	
+	<!-- team -->
+	<div class="team">
 		<!-- container -->
 		<div class="container">
-			<div class="map footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-				<div id="googleMap" style="height:400px;width:100%;"></div>
-					<script>
-					function myMap() {
-					var myCenter = new google.maps.LatLng(6.601709, 3.343782);
-					var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
-					var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-					var marker = new google.maps.Marker({position:myCenter});
-					marker.setMap(map);
-					}
-					</script>
-					<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB63Rxydh3k1S6TOUsOH11cF4OmVyMf27A&callback=myMap"></script>
-					<!--
-				To use this code on your website, get a free API key from Google.
-			Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
-											-->
-			</div>
-			<div class="mail-grids">
-				<div class="col-md-6 mail-grid-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-					<h3>Contact Us</h3>
-					<h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros <span>ut convallis felis consectetur ut </span></h5>
-					<h4>Headquarters</h4>
-					<p>123 T. Globel Place.
-						<span>CG 09-123</span>
-						Italy, Ba. 4567
-					</p>
-					<h4>Get In Touch</h4>
-					<p>Telephone: +1 234 567 9871
-						<span>FAX: +1 234 567 9871</span>
-						E-mail: <a href="mailto:info@example.com">mail@example.com</a>
-					</p>
+			<div class="team-info">
+				<h3 class="wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">FAQs</h3>
+				<div class="team-grids">
+					<div class="col-md-6 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+						<h4><u>I'm a business, can you help me?</u></h4>
+						<p>Fantastic we would love to serve you just give us a call or drop us a request and we will arrange a pickup for you. Also we have regular scheduled pickup services for business just give us a call.</p>
+
+						<h4><u>What do you do with all this stuff?</u></h4>
+						<p>We see if the stuff you are selling can be either raised by somebody else. If not, then we try if it can be refurbished. If that still is not the case, then we sell it to recyclers to melt it to make something better out of it.</p>
+
+						<h4><u>My item is not listed in your list, will yo buy it?</u></h4>
+						<p>If you have used it in the past, probablilities are somebody might want to reuse it or it is recycled. So we will make our best efforts to grab it from you if possible.</p>
+
+						<h4><u>Do you operate in my city?</u></h4>
+						<p>We are operational in lagos and are expecting to other states as fast as we can. We have plans to operate in other states too real soon.</p>
+
+						<h4><u>What all do you collect?</u></h4>
+						<p>We collect almost everythings which you might want to sell. Mostly we called recyclable and resusable stuff. If you are not sure we would buy your stuff, just give us a call</p>
+					</div>
+					
+					<div class="col-md-6 team-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+						
+					</div>
+					<div class="clearfix"> </div>
 				</div>
-				<div class="col-md-6 contact-form wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-					<form>
-						<input type="text" placeholder="Name" required="">
-						<input type="text" placeholder="Email" required="">
-						<input type="text" placeholder="Subject" required="">
-						<textarea placeholder="Message" required=""></textarea>
-						<input type="submit" value="SEND">
-					</form>
-				</div>
-				<div class="clearfix"> </div>
 			</div>
 		</div>
 		<!-- //container -->
 	</div>
-	<!-- //mail -->
+	<!-- //team -->
 	<!-- footer -->
 	<div class="footer">
 		<!-- container -->
