--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Truck a Transport Category Flat Bootstarp responsive Website Template| Home :: w3layouts</title>
+<title>Ecocycler</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Truck Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="Eco-cycler Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstarp-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -56,8 +50,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="menu"><img src="images/menu.png" alt=""></span>
 					<ul class="nav1">
 						<li class="hvr-sweep-to-bottom"><a href="about.html">About<i><img src="images/nav-but2.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Vendor<i><img src="images/truck.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="partner.html">Be a Partner<i><img src="images/handshake.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Carrier<i><img src="images/truck.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="partner.html">Join as Customer<i><img src="images/handshake.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="blog.html">Blog<i><img src="images/nav-but4.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="login.html">Login<i><img src="images/log-in.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
@@ -227,9 +221,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- <h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros ut convallis felis consectetur ut </h5> -->
 				<p>Ecocycle is a service which helps you to sell your old and throw away Scrap in an organized manner. It is as easy as calling or droping us a note through our web solution.
 				</p>
-				<div class="see-button">
+				<!-- <div class="see-button">
 					<a class="btn btn-primary btn-lg see-button hvr-shutter-out-horizontal specialty-button" href="services.html" role="button">See More</a>
-				</div>
+				</div> -->
 			</div>
 			<div class="col-md-8 specialty-grids">
 				<div class="specialty-grids-top">
@@ -306,7 +300,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</figure>
 					</div>
 					<div class="col-md-9">
-						Sell off your worries along with your Scrap.<br>Ecocycler carries digitised ISO certified scales and maintains a high level of transparency.
+						Sell off your worries along with your Scrap.<br>Ecocyclers maintains a high level of transparency.
 					</div>
 				</div>
 			</div>
@@ -321,7 +315,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</figure>
 					</div>
 					<div class="col-md-9">
-						We value your goods. They say , one persons Scrap is another person gold we believe yours is good too and hence treated
+						We value your goods. They say , one persons Scrap is another person treasure we believe yours is good too and hence treated
 					</div>
 				</div>
 			</div>
@@ -378,9 +372,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 				<ul>
-					<li><a href="index.html">FAQs</a></li>
+					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Join as Vendor</a></li>
+					<li><a href="vendor.html">Join as Carrier</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="mail.html">Mail Us</a></li>
 				</ul>
@@ -413,7 +407,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- container -->
 		<div class="container">
 			<div class="copyright-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-				<p>© 2015 Truck. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© 2015 Eco-cycler. Design by <a href="http://despatch.com.ng/">despatch.com.ng</a></p>
 			</div>
 			<div class="copyright-right wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 				<ul>
