--- a/form.html
+++ b/form.html
@@ -1,16 +1,10 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Truck a Transport Category Flat Bootstarp responsive Website Template| Home :: w3layouts</title>
+<title>Ecocycler</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Truck Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="Eco-cycler Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstarp-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -61,8 +55,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="menu"><img src="images/menu.png" alt=""></span>
 					<ul class="nav1">
 						<li class="hvr-sweep-to-bottom"><a href="about.html">About<i><img src="images/nav-but2.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Vendor<i><img src="images/truck.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="partner.html">Be a Partner<i><img src="images/handshake.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="vendor.html">Join as Carrier<i><img src="images/truck.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="partner.html">Join as Customer<i><img src="images/handshake.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="blog.html">Blog<i><img src="images/nav-but4.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="login.html">Login<i><img src="images/log-in.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
@@ -89,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					
 				</div>
 				<div class="col-md-6">
-					<p class="text-center">You can also be one of our <a href="both.html"> Vendor or Patner</a></p>
+					<p class="text-center">You can also be one of our <b><a href="vendor.html"> Carriers</a> or <a href="partner.html"> Customers</a></b></p>
 					<form action="" method="POST" role="form" class="">
 						<div class="" id="First-Div">
 
@@ -215,7 +209,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="form-group">
 								<select id="multiple" class="__selector" name="select2" multiple>
 								    <option value=""selected>Search for scrap you want to sell</option>
-								    <option value="1" data-subtitle="The first option" data-left="images/Plastic-Bottles.jpg" data-right="1">Plastic</option>
+								    <option value="1" data-subtitle="The first option" data-left="images/Plastic-Bottles.jpg" data-right="1" data-input="">Plastic</option>
 								    <option value="2" data-subtitle="The second option" data-left="images/Copper.jpg" data-right="2">Coppers</option>
 								    <option value="3" data-subtitle="The third option" data-left="images/Plastic-Bottles.jpg" data-right="3">Three</option>
 								    <option value="4" data-left="Plastic-Bottles.jpg" data-right="4">Four</option>
@@ -284,9 +278,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 				<ul>
-					<li><a href="index.html">FAQs</a></li>
+					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Join as Vendor</a></li>
+					<li><a href="vendor.html">Join as Carrier</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="mail.html">Mail Us</a></li>
 				</ul>
