--- a/vendor.html
+++ b/vendor.html
@@ -1,16 +1,10 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Truck a Transport Category Flat Bootstarp responsive Website Template| Home :: w3layouts</title>
+<title>Ecocycler</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Truck Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="Eco-cycler Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstarp-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -61,8 +55,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="menu"><img src="images/menu.png" alt=""></span>
 					<ul class="nav1">
 						<li class="hvr-sweep-to-bottom"><a href="about.html">About<i><img src="images/nav-but2.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom active"><a href="vendor.html">Join as Vendor<i><img src="images/truck.png" alt=""/></i></a></li>
-						<li class="hvr-sweep-to-bottom"><a href="partner.html">Be a Partner<i><img src="images/handshake.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom active"><a href="vendor.html">Join as Carrier<i><img src="images/truck.png" alt=""/></i></a></li>
+						<li class="hvr-sweep-to-bottom"><a href="partner.html">Join as Customer<i><img src="images/handshake.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="blog.html">Blog<i><img src="images/nav-but4.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="login.html">Login<i><img src="images/log-in.png" alt=""/></i></a></li>
 						<li class="hvr-sweep-to-bottom"><a href="mail.html">Contact<i><img src="images/nav-but5.png" alt=""/></i></a></li>
@@ -111,14 +105,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<label for="" class="">Email address</label>
 								<input type="text" class="form-control" name="" id="" placeholder="">
 							</div>
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<label for="" class="f1">Password</label>
 								<input type="password" class="form-control" name="" id="" placeholder="">
 							</div>
 							<div class="form-group">
 								<label for="" class="f1">Confirm Password</label>
 								<input type="password" class="form-control" name="" id="" placeholder="">
-							</div>
+							</div> -->
 
 							<div class="row">
 								<div class="col-md-6"></div>
@@ -208,9 +202,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
 				<ul>
-					<li><a href="index.html">FAQs</a></li>
+					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="services.html">Join as Vendor</a></li>
+					<li><a href="vendor.html">Join as Carrier</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="mail.html">Mail Us</a></li>
 				</ul>
