--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
 	<!-- team -->
 	<div class="team">
 		<!-- container -->
-		<div class="container">
+		<!-- <div class="container">
 			<div class="team-info">
 				<h3 class="wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">FAQs</h3>
 				<div class="team-grids">
@@ -176,7 +176,7 @@
 					<div class="clearfix"> </div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- //container -->
 	</div>
 	<!-- //team -->
