--- a/forget.html
+++ b/forget.html
@@ -82,7 +82,7 @@
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<form action="" method="POST" role="form" class="">
-						<h1>Forget Password</h1>
+						<h1>Forgot Password</h1>
 						<p class="">Enter your email address we will sent you the password reset link.</p>
 						<div class="form-group">
 							<label for="" class="">Email address</label>
@@ -91,7 +91,7 @@
 						<div class="row">
 							<div class="col-md-3"></div>
 							<div class="col-md-6">
-								<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;">Submit
+								<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;">Submit
 				        		</button>
 							</div>
 							<div class="col-md-3"></div>
