--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
 		<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-					<p class="text-center">You can also be one of our <b><a href="vendor.html"> Carriers</a> or <a href="partner.html"> Customers</a></b></p>
+					<!-- <p class="text-center">You can also be one of our <b><a href="vendor.html"> Carriers</a> or <a href="partner.html"> Customers</a></b></p> -->
 					<form action="" method="POST" role="form" class="">
 						<div class="form-group">
 							<label for="" class="">Email address</label>
@@ -94,12 +94,17 @@
 						<div class="row">
 							<div class="col-md-3"></div>
 							<div class="col-md-6">
-								<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;">Login
+								<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;">Login
 				        		</button>
 
-				        		<p class="text-center wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;"><a href="forget.html">Forget Password</a></p>
+				        		<p class="text-center wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;"><a href="forget.html">Forget Password</a></p>
 							</div>
 							<div class="col-md-3"></div>
+						</div>
+
+						<hr>
+						<div class="text-center">
+							<p class="wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;"> Don't have an account? Sign Up as<a href="vendor.html"> Carriers</a> or <a href="partner.html"> Customers</a></p>
 						</div>	
 					</form>
 				</div>
@@ -110,7 +115,7 @@
 	<div class="footer">
 		<!-- container -->
 		<div class="container">
-			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<ul>
 					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
@@ -123,7 +128,7 @@
 					<input type="submit" value="Subscribe">
 				</form>
 			</div>
-			<div class="col-md-3 col-sm-3 footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-3 col-sm-3 footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<h3>Address</h3>
 				<div class="address">
 					<p>756 gt globel Place,
@@ -134,7 +139,7 @@
 					<p>+1(100)2345-6789</p>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-3 col-sm-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<a href="#"><img src="images/logo.png" alt="" /></a>
 				<p>Proin eget ipsum ultrices, aliquet velit eget, tempus tortor. Phasellus non velit sit amet diam faucibus molestie tincidunt efficitur nisi.</p>
 			</div>
@@ -146,10 +151,10 @@
 	<div class="copyright">
 		<!-- container -->
 		<div class="container">
-			<div class="copyright-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="copyright-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<p>© 2015 Truck. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 			</div>
-			<div class="copyright-right wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="copyright-right wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<ul>
 					<li><a href="#" class="twitter"> </a></li>
 					<li><a href="#" class="twitter facebook"> </a></li>
