--- a/partner.html
+++ b/partner.html
@@ -99,7 +99,8 @@
 							</div>
 							<div class="form-group">
 								<label for="" class="">Phone number</label>
-								<input type="number" class="form-control" name="" id="" placeholder="+234">
+								<input type="text" class="form-control f1" name="quantity" id="quantity" placeholder="+234" /><span id="errmsg"></span>
+								<!-- <input type="number" class="form-control" name="" id="" placeholder="+234"> -->
 							</div>
 							<div class="form-group">
 								<label for="" class="">Email address</label>
@@ -117,7 +118,7 @@
 							<div class="row">
 								<div class="col-md-6"></div>
 								<div class="col-md-6">
-									<button type="button" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;"  onclick="showNextForm()">NEXT
+									<button type="button" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;"  onclick="showNextForm()">NEXT
 					        		</button>
 								</div>
 							</div>
@@ -151,7 +152,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-										<label for="" class="">State of Residence</label>
+										<label for="" class="">State</label>
 										<select name="" id="input" class="form-control">
 											<option value="">Select State</option>
 											<option value="">Nigeria</option>
@@ -163,11 +164,11 @@
 
 							<div class="row">
 								<div class="col-md-6 col-sm-6 col-xs-6">
-									<button type="button" class="btn-custom3 arrow-btn3 f1 f-16 wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;"  onclick="showPrevForm()">PREV
+									<button type="button" class="btn-custom3 arrow-btn3 f1 f-16 wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;"  onclick="showPrevForm()">PREV
 						        	</button>
 								</div>
 								<div class="col-md-6 col-sm-6 col-xs-6">
-									<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s;  animation-name: fadeInUp;">SUBMIT
+									<button type="submit" class="btn-custom2 wow fadeInUp waves-effect waves-classic" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s;  animation-name: fadeInUp;">SUBMIT
 				        		</button>
 								</div>
 							</div>
@@ -181,7 +182,7 @@
 	<div class="footer">
 		<!-- container -->
 		<div class="container">
-			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-6 col-sm-6 footer-left  wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<ul>
 					<li><a href="faq.html">FAQs</a></li>
 					<li><a href="about.html">About</a></li>
@@ -194,7 +195,7 @@
 					<input type="submit" value="Subscribe">
 				</form>
 			</div>
-			<div class="col-md-3 col-sm-3 footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-3 col-sm-3 footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<h3>Address</h3>
 				<div class="address">
 					<p>756 gt globel Place,
@@ -205,7 +206,7 @@
 					<p>+1(100)2345-6789</p>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="col-md-3 col-sm-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<a href="#"><img src="images/logo.png" alt="" /></a>
 				<p>Proin eget ipsum ultrices, aliquet velit eget, tempus tortor. Phasellus non velit sit amet diam faucibus molestie tincidunt efficitur nisi.</p>
 			</div>
@@ -217,10 +218,10 @@
 	<div class="copyright">
 		<!-- container -->
 		<div class="container">
-			<div class="copyright-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="copyright-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<p>© 2015 Truck. Design by <a href="http://w3layouts.com/">W3layouts</a></p>
 			</div>
-			<div class="copyright-right wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+			<div class="copyright-right wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.2s;">
 				<ul>
 					<li><a href="#" class="twitter"> </a></li>
 					<li><a href="#" class="twitter facebook"> </a></li>
@@ -253,6 +254,20 @@
 	</div>
 
 	<script type="text/javascript">
+
+		// only number alone
+
+    	$(document).ready(function () {
+		  //called when key is pressed in textbox
+		  $("#quantity").keypress(function (e) {
+		     //if the letter is not digit then display error and don't type anything
+		     if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+		        //display error message
+		        $("#errmsg").html("Numbers Only Please").show().fadeOut("slow");
+		               return false;
+		    }
+		   });
+		});
 		/*
 	Dropdown with Multiple checkbox select with jQuery - May 27, 2013
 	(c) 2013 @ElmahdiMahmoud
